--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bugs": {
     "url": "https://github.com/akveo/ngx-admin/issues"
   },
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
