--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\"",
-    "test:open": "npx cypress open"
+    "test:open": "npx cypress open --config-file ./cypress.config.stage.ts"
   },
   "dependencies": {
     "@angular/animations": "^15.2.10",
@@ -43,10 +43,12 @@
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@bahmutov/cy-api": "^2.2.6",
     "@nebular/auth": "11.0.1",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/security": "11.0.1",
     "@nebular/theme": "11.0.1",
+    "@simonsmith/cypress-image-snapshot": "^9.0.1",
     "@swimlane/ngx-charts": "^14.0.0",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
@@ -54,6 +56,7 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "cypress-plugin-api": "^2.11.1",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
